# dasboot

./: CMakeLists.txt  README.md  install_cli11.sh  install_dependencies.sh  install_protobuf.sh
.github/workflows/: clang-gtest.yml
dasboot/: CMakeLists.txt
dasboot/app/: CMakeLists.txt  dasbootc.cpp  dasbootd.cpp  main.cpp
dasboot/cli/: CMakeLists.txt  cli.cpp  cli.hpp  cli_ut.cpp  commands.cpp  commands.hpp
dasboot/controller/: CMakeLists.txt  controller.cpp  controller.hpp  controller_ut.cpp
dasboot/core/: CMakeLists.txt
dasboot/core/container/: CMakeLists.txt  container.cpp  container.hpp  container_ut.cpp  isolate.cpp
dasboot/core/coordinator/: CMakeLists.txt  coordinator.cpp  coordinator.hpp  imagemanager.cpp  imagemanager.hpp  imagemanager_ut.cpp
dasboot/core/daemon/: CMakeLists.txt  daemon.cpp  daemon.hpp  daemon_ut.cpp
dasboot/cru/: CMakeLists.txt  common.hpp  cru.cpp  cru.hpp  cru_ut.cpp  fs_ut.cpp  os.cpp  os.hpp
dasboot/proto/: CMakeLists.txt  messages.proto
diagrams/: arch.d2  model.d2
src/: main.cpp
src/cli/: baseinterfaces.cpp  baseinterfaces.hpp  cli.cpp  cli.hpp
ut/: CMakeLists.txt  cli_ut.cpp
